# da-instaseis

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
notebooks/: generate_wavefields.ipynb  getting_started.ipynb  sensor_locations.csv
src/da_instaseis/: __init__.py  plotting.py  waveforms.py
tests/: test_waveforms.py
