[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "da-instaseis"
version = "0.1.0"
description = "Data assimilation of global wavefields using instaseis"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "obspy>=1.4",
    "tqdm>=4.65",
]

[project.optional-dependencies]
ml = ["torch>=2.0"]
dev = ["pytest>=7.0", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]
